# cal-rules

./: .editorconfig  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt  setup.py
calrules/: __main__.py  cli.py  config.py  config_schema.yaml  exchange.py  exchange_rootca.py  item.py  rules.py
tests/: test_config.py  test_item.py  test_rules.py
tests/fixtures/: loads_config.yaml  loads_config_invalid.yaml
