[tool.poetry]
name = "calrules"
version = "0.1.0"
description = ""
authors = ["Simon Thulbourn"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
rule-engine = "^3.2.0"
PyYAML = "^5.4.1"
exchangelib = "^4.2.0"
yamale = "^3.0.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
calrules = "calrules.cli:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -vv"
testpaths = "./tests"
markers = "perf: marks perf tests to be deselected (deselect with '-m \"not perf\"')"

[tool.coverage.run]
source = ["calrules"]
omit = ["tests/*"]
branch = true

[tool.coverage.report]
fail_under = 90
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "test_report"
title = "Cal Rules Test Coverage"